# HF-ICT_GUI_Game-Pokemon

./: .gitignore  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  GameArea.cpp  GameArea.h  GameWidget.cpp  GameWidget.h  GameWindow.cpp  GameWindow.h  LICENSE.md  README.md  Thread.cpp  Thread.h  main.cpp
gameObjects/: CollisionDetection.cpp  CollisionDetection.h  Crosshair.cpp  Crosshair.h  GameObject.cpp  GameObject.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Shot.cpp  Shot.h
